# Monte_Carlo_Predict_Stock

./: .env  .env.example  .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE_5-8_HANDOFF.md  README.md  SECURITY.md  _synctest.txt  _test_bash_write.txt  config.py  docker-compose.yml  main.py  portfolio_tracker.html  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  analysis.py  deps.py  models.py  server.py  state.py  websockets.py
api/routers/: __init__.py  ai.py  news.py  options.py  pages.py  portfolio.py  scanner.py  signal.py  store.py
core/: __init__.py  ai_analyst.py  backtest.py  conformal.py  contract_tracker.py  expected_move.py  fetcher.py  forecast.py  hawkes.py  hmm_regime.py  htf.py  hurst.py  indicators.py  levels.py  macro.py  market_structure.py  montecarlo.py  news_aggregator.py  news_stream.py  options_flow.py  pop_scanner.py  regime.py  scanner.py  sentiment.py  signal.py  store.py  trade_setup.py  volume_profile.py  yf_client.py  zone_scanner.py  zones.py
core/ai/: __init__.py  ai_analyst.py
core/analysis/: __init__.py  backtest.py  conformal.py  expected_move.py  forecast.py  htf.py  indicators.py  levels.py  market_structure.py  montecarlo.py  regime.py  signal.py  trade_setup.py  volume_profile.py  zones.py
core/data/: __init__.py  db.py  fetcher.py  sectors.py  watchlists.py
core/news/: __init__.py  fear_greed.py  headline_sentiment.py  insider.py  news_sources.py
core/options/: __init__.py  contract_tracker.py  gex_heatmap.py  options_flow.py
core/scanners/: __init__.py  pop_scanner.py  scanner.py  zone_scanner.py
core/sentiment/: __init__.py  aggregate.py  cramer.py  global_market.py  options_activity.py  scoring.py  social.py  x.py
docs/: linkedin_post.md  math.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chart/: page.tsx
frontend/app/flow/: page.tsx
frontend/app/gex/: page.tsx
frontend/app/scanner/: page.tsx
frontend/app/signal/: page.tsx
frontend/components/: ChartPanel.tsx  FlowFeed.tsx  GexChart.tsx  GexPanel.tsx  McFanChart.tsx  Nav.tsx  PriceChart.tsx  ScannerPanel.tsx  Select.tsx  SignalPanel.tsx  StatusBadge.tsx
frontend/lib/: analysisApi.ts  analysisTypes.ts  api.ts  blackScholes.ts  display.ts  format.ts  gexApi.ts  gexTypes.ts  indicators.ts  sampleCandles.ts  sampleFlow.ts  sampleGex.ts  sampleScan.ts  sampleSignal.ts  scannerApi.ts  scannerTypes.ts  types.ts
pytest-cache-files-u0mxvsip/v/cache/: nodeids
scripts/: verify_step1.py  verify_step2.py  verify_step3.py  verify_step4.py  verify_step5.py  verify_step6.py  verify_step7.py  verify_warmstart.py
static/: contract.html  flow.html  monte_carlo_microstructure.py
static/css/: dashboard.css  portfolio.css
static/js/: alerts.js  chart.js  config-panel.js  index.js  nav.js  right-panel.js  scanner.js  tooltips.js  utils.js  ws.js
static/js/tabs/: ai_analyst.js  gex.js  macro.js  market-structure.js  news.js  options.js  pop_scanner.js  scanner-tabs.js  sentiment.js  unusual-options.js  zone-scanner.js
templates/: dashboard.html  portfolio_tracker.html
tests/: conftest.py  test_api.py  test_backtest.py  test_forecast.py  test_hurst.py  test_indicators.py  test_montecarlo.py  test_options_flow_levels.py  test_pop_scanner.py  test_regressions.py  test_review_fixes.py  test_sanitize_ohlc.py  test_signal.py  test_store.py  test_zones.py
