# pyproject.toml
# Project metadata + Python tooling config.
#
# Install:  pip install -e .
# Run ruff: ruff check .
# Run fmt:  ruff format .

[project]
name = "mc-trader"
version = "0.1.0"
description = "Self-hosted Monte Carlo stock analysis dashboard"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{name="qle107"}]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["api*", "core*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length    = 110

exclude = [
    ".venv",
    ".git",
    ".idea",
    "__pycache__",
    "build",
    "dist",
    "resource_image",
    "static/monte_carlo_microstructure.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "E731",
    "B008",
    "SIM108",
    "RUF012",
    # Mathematical notation intentional throughout this quant codebase.
    # Greek letters (alpha, sigma), en-dash ranges, multiplication signs
    # appear in docstrings, comments, and string literals for readability.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*"             = ["E402"]
"core/montecarlo.py"  = ["E741"]
"core/signal.py"      = ["E741"]
"core/indicators.py"  = ["E741"]
"core/zones.py"       = ["E741"]
"core/zone_scanner.py" = ["E741"]
"core/regime.py"      = ["E741"]
"core/volume_profile.py" = ["E741"]
"core/hawkes.py"      = ["E741"]
"core/hmm_regime.py"  = ["E741"]
"tests/test_zones.py" = ["E741", "RUF059"]

[tool.ruff.format]
quote-style           = "double"
indent-style          = "space"
line-ending           = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion     = "9.0"
testpaths      = ["tests"]
addopts        = "--cov=core --cov=api --cov=config --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:hmmlearn.*",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
ignore_missing_imports = true
exclude = ["\\.venv", "build", "dist"]
