# pyproject.toml
# Project metadata + Python tooling config.
#
# Install:  pip install -e .
# Run ruff: ruff check .
# Run fmt:  ruff format .

[project]
name = "mc-trader"
version = "0.1.0"
description = "Self-hosted Monte Carlo stock analysis dashboard"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{name="qle107"}]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["api*", "core*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length    = 110

exclude = [
    ".venv",
    ".git",
    ".idea",
    "__pycache__",
    "build",
    "dist",
    "resource_image",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "E731",
    "B008",
    "SIM108",
    "RUF012",
    # Mathematical notation intentional throughout this quant codebase.
    # Greek letters (alpha, sigma), en-dash ranges, multiplication signs
    # appear in docstrings, comments, and string literals for readability.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"core/analysis/montecarlo.py"  = ["E741"]
"core/analysis/signal.py"      = ["E741"]
"core/analysis/indicators.py"  = ["E741"]
"core/analysis/zones.py"       = ["E741"]
"core/scanners/zone_scanner.py" = ["E741"]
"core/analysis/regime.py"      = ["E741"]
"core/analysis/volume_profile.py" = ["E741"]
"core/analysis/hawkes.py"      = ["E741"]
"core/data/fetcher.py"         = ["E741"]

[tool.ruff.format]
quote-style           = "double"
indent-style          = "space"
line-ending           = "auto"
docstring-code-format = true


[tool.mypy]
python_version = "3.10"
warn_return_any = false
ignore_missing_imports = true
exclude = ["\\.venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
